fixed dark mode issue and changed favicon

--- a/src/App.scss
+++ b/src/App.scss
@@ -1638,7 +1638,7 @@ p.text-medium {
 /* Contact */
 
 .contact {
-  background: linear-gradient(90.21deg, #277a73 -5.91%, #5f85f8 111.58%);
+  background: linear-gradient(90.21deg, #277a73 -5.91%, #5f85f8 111.58%) !important;
   padding: 60px 0 200px 0;
 }
 
